# llm-eval-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.override.example.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/app/: config.py  deps.py  main.py  metrics.py  middleware.py  models.py  orchestrator.py  repositories.py
backend/src/app/errors/: dlq.py  exceptions.py  handlers.py
backend/src/app/judge/: engine.py  rubrics.py
backend/src/app/judge/templates/: judge_prompt.j2
backend/src/app/providers/: base.py  cache.py  circuit_breaker.py  gemini.py  ollama_provider.py  openai_provider.py  rate_limiter.py  registry.py  vllm_provider.py
backend/src/app/routes/: eval.py  system.py
backend/tests/: conftest.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_cache.py  test_circuit_breaker.py  test_exceptions.py  test_judge.py  test_rate_limiter.py  test_rubrics.py
docs/: api.md  architecture.md  deployment.md  setup.md
infra/grafana/dashboards/: eval-pipeline.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: datasource.yml
infra/prometheus/: alerts.yml  prometheus.yml
n8n/: README.md
n8n/workflows/: eval-pipeline.json
prompts/: coding.csv  hallucination.csv  harmful.csv  injection.csv
rubrics/: default.yaml  safety.yaml
